# expense-tracker-cli

./: README.md  pyproject.toml
expense-tracker/: expense-tracker.py  methods.py
expense_tracker/: __main__.py  expenser.py  methods.py
